--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             
             
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">&nbsp;CNPJ da Campanha: <strong>47.469.780/0001-87</strong>&nbsp;<br>© Copyright 2022</p>
+                <p class="mbr-text mb-0 mbr-fonts-style align-center display-7">&nbsp;CNPJ da Campanha: <strong>47.469.780/0001-87</strong>&nbsp;<br>© Copyright 2022</p>
             </div>
         </div>
     </div>
